# thesis-with-context

./: .gitignore  .graphifyignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  visual_inspection_report.md
.claude/: settings.json
.claude/agents/: experiment-reviewer.md  result-aggregator.md  slurm-log-triager.md
.claude/hooks/: check-new-file-size.py  route-exploration.py
.claude/skills/new-baseline/: SKILL.md
.claude/skills/register-experiment/: SKILL.md
MMTSFM/: README.md  pyproject.toml
MMTSFM/configs/: config.yaml
MMTSFM/configs/data/: default.yaml  goespvdaq.yaml  ukpv.yaml
MMTSFM/configs/experiment/: ukpv.yaml
MMTSFM/configs/logger/: wandb.yaml
MMTSFM/configs/model/: chronos2.yaml  default.yaml  mlp_baseline.yaml  vision_chronos2.yaml  vision_chronos2_grassmann.yaml  vision_chronos2_headline.yaml  vision_chronos2_timeselfattn.yaml
MMTSFM/configs/trainer/: default.yaml  slurm.yaml  vision_chronos2.yaml
MMTSFM/docs/specs/: generalization-fixes.md
MMTSFM/dummy_decord/: pyproject.toml
MMTSFM/dummy_decord/src/decord/: __init__.py
MMTSFM/scripts/: diag_adapter_influence.py  diag_forward_pass.py  download_phase1.py  evaluate.py  extract_video_embeddings.py  login_node_setup.sh  precache_login.sh  run_all_mmtsfm.sh  slurm_eval_compare.sh  slurm_extract_vjepa.sh  slurm_train_vjepa.sh  verify.py  verify_reproducibility.py
MMTSFM/scripts/meteorology/: build_all.py  config.py  refactor_earthnet2021.py  refactor_era5_eu.py  refactor_meteonet.py
MMTSFM/scripts/solar/: build_all.py  build_unified.py  config.py  refactor_goes16_nsrdb.py  refactor_skippd.py  refactor_solarnet.py
MMTSFM/src/eval/: evaluator.py  metrics.py  protocol_eval.py
MMTSFM/src/mmtsfm/: train.py
MMTSFM/src/mmtsfm/data/: datamodule.py  dataset.py  pv_record.py
MMTSFM/src/mmtsfm/models/: base.py
MMTSFM/src/mmtsfm/models/chronos2/: __init__.py  chronos_bolt.py  config.py  grassmann.py  layers.py  lightning_module.py  model.py  pipeline.py  trainer.py  utils.py  vision_chronos2.py
MMTSFM/src/mmtsfm/models/vision/: __init__.py  cross_modal_adapter.py  latent_summarizer.py  sensor_projection.py  vidtok_encoder.py  visual_encoder.py
MMTSFM/src/utils/: reproducibility.py
MMTSFM/tests/: test_baseline_comparability.py  test_convergence_fixes.py  test_grad_logging.py  test_metrics.py  test_protocol_eval.py  test_pv_record.py  test_training_loop.py  test_vision_chronos2.py  test_visual_marginal_gain_integration.py
baselines/: README.md  RUNNING_ON_LEONARDO.md  pyproject.toml  run_eval.py
baselines/.claude/hooks/: guard-data-readonly.py  guard-uv-only.py
baselines/common/: __init__.py  aggregate.py  base.py  config.py  controls.py  metrics.py  runner.py  splits.py  stats.py  windows.py
baselines/configs/: splits.json
baselines/results/: climatology_hourly_s2_ukpv.json  dlinear_s2_ukpv_agg.json  dlinear_s2_ukpv_seed42.json  dlinear_s2_ukpv_seed43.json  dlinear_s2_ukpv_seed44.json  itransformer_s2_ukpv_agg.json  itransformer_s2_ukpv_seed42.json  itransformer_s2_ukpv_seed43.json  itransformer_s2_ukpv_seed44.json  lightgbm_s2_ukpv_agg.json  lightgbm_s2_ukpv_seed42.json  lightgbm_s2_ukpv_seed43.json  lightgbm_s2_ukpv_seed44.json  mlp_s2_ukpv_agg.json  mlp_s2_ukpv_seed42.json  mlp_s2_ukpv_seed43.json  mlp_s2_ukpv_seed44.json  patchtst_s2_ukpv_agg.json  patchtst_s2_ukpv_seed42.json  patchtst_s2_ukpv_seed43.json  patchtst_s2_ukpv_seed44.json  persistence_s2_ukpv.json  seasonal_naive_s2_ukpv.json  smart_persistence_s2_ukpv.json  tft_s2_ukpv_agg.json  tft_s2_ukpv_seed42.json  tft_s2_ukpv_seed43.json  tft_s2_ukpv_seed44.json
baselines/scripts/: aggregate_all.py  efficiency.py  import_predictions.py  login_node_prep.sh  make_tables.py  plot_predictions.py  precache_login.sh  run_all_baselines.sh  run_suite.py  significance.py  slurm_aurora.sh  slurm_baselines.sh  slurm_crossvivit.sh  slurm_dump_all.sh  slurm_rag_original.sh  slurm_solar_vlm.sh  slurm_sunset.sh  slurm_tier5.sh  slurm_time_vlm.sh  slurm_time_vlm_eval.sh  slurm_unicast.sh  slurm_visionts_pp.sh  summarize_ukpv.py
baselines/solar_vlm/: requirements.txt  run_skippd.py  test_generalization.sh
baselines/solar_vlm/data_provider/: data_factory.py  data_loader_pv.py
baselines/solar_vlm/exp/: experiment.py
baselines/solar_vlm/layers/: Embed.py  GraphLearner.py
baselines/solar_vlm/src/SolarVLM/: qwen3_vl_embedding.py  text_encoders.py
baselines/solar_vlm/tools/: evaluate_generalization.py  precompute_vision_feats_wollongong.py
baselines/tests/: conftest.py  test_baseline_contract.py  test_build_chronos_inputs.py  test_controls.py  test_eval_protocol.py  test_import_predictions.py  test_metrics.py  test_stats.py  test_tier0.py  test_tier3.py  test_tier4.py  test_tier4_vendor.py  test_tier5_vendor.py  test_windows.py
baselines/tier0/: __init__.py  reference.py
baselines/tier1/: __init__.py  features.py  gbm.py  tabpfn_model.py
baselines/tier3/: __init__.py  build_chronos_inputs.py  chronos.py  timesfm.py  tirex.py  ttm.py
baselines/tier4/: __init__.py  cora.py  rag.py
baselines/tier5/: uk_export.py
baselines/tier6/: __init__.py  uk_multimodal.py
baselines/tslib/: __init__.py  adapter.py  layers.py  models.py  trainer.py
dataset_exploration/: curate_dataset.py  dataset_exploration_report.md  pack_images.py  pyproject.toml  run_eda.py
docs/: README.md
docs/architecture/: OVERVIEW.md
docs/context/: CONTEXT_ENGINEERING.md  DATASET_CONTRACT.md  NAMING_CONVENTIONS.md  RESEARCH_SCOPE.md
docs/experiments/: ABLATION_REGISTRY.md  BASELINE_COMPARISON.md  BASELINE_PROTOCOL.md  BASELINE_RESULTS_UKPV.md  BASELINE_TEST_REPORT.md  TIER4_RAG_INTEGRATION.md  TIER5_INTEGRATION.md  TIER6_INTEGRATION.md
knowledge/: README.md
knowledge/docs/: baselines.md  mmtsfm-architecture-deep-dive-design-rationale.md  proposal.md  pv-power-forecasting-baseline-models.md  related-works.md
