[project]
name = "mmtsfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "lightning>=2.1.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "wandb>=0.16.0",
    "python-dotenv>=1.0.0",
    "pyrootutils>=1.0.4",
    "transformers>=4.40.0",
    "einops>=0.7.0",
    "scikit-learn>=1.4.0",
    "huggingface-hub>=1.7.2",
    "pyarrow>=23.0.1",
    "pandas>=2.0.0",          # dataset-of-record (pv_record) parquet handling
    "h5py>=3.10.0",           # satellite frames in images_all.h5 (pv_record)
    "pillow>=12.1.1",
    "tqdm>=4.67.3",
    "requests>=2.32.5",
    "boto3>=1.42.74",
    "netcdf4>=1.7.3",
    # V-JEPA 2.1 is not on PyPI — install from GitHub
    "timm",
    "gluonts>=0.16.2",
    "earthnet>=0.3.11",
    "matplotlib>=3.10.8",
    "scipy>=1.12.0",
    "cdsapi>=0.7.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
vidtok = [
    # decord>=0.6.0,          # video loading — Linux only (no macOS wheel)
    "av>=12.0.0",             # PyAV — low-level video decode used by VidTok
    "torchvision>=0.17.2",    # image transforms inside VidTok pipeline
    "opencv-python>=4.6.0",   # cv2 — image processing in VidTok scripts
    "imageio>=2.34.0",        # frame I/O in VidTok scripts
    "natsort>=8.4.0",         # natural-sort for file listings in VidTok
    "beartype>=0.18.2",       # runtime type checking used in VidTok model_3dcausal
    "safetensors>=0.4.2",     # checkpoint loading (VidTok + HF models)
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mmtsfm", "src/utils", "src/eval"]

[tool.uv]
override-dependencies = [
    "decord>=0.6.0; sys_platform != 'darwin'"
]
