[project]
name = "mmtsfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "lightning>=2.1.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "wandb>=0.16.0",
    "python-dotenv>=1.0.0",
    "pyrootutils>=1.0.4",
    "transformers>=4.40.0",
    "einops>=0.7.0",
    "scikit-learn>=1.4.0",
    "huggingface-hub>=1.7.2",
    "pyarrow>=23.0.1",
    "pandas>=2.0.0",          # dataset-of-record (pv_record) parquet handling
    "h5py>=3.10.0",           # satellite frames in images_all.h5 (pv_record)
    "pillow>=12.1.1",
    "tqdm>=4.67.3",
    "requests>=2.32.5",
    "boto3>=1.42.74",
    "netcdf4>=1.7.3",
    # V-JEPA 2.1 is not on PyPI — install from GitHub
    "timm",
    "gluonts>=0.16.2",
    "earthnet>=0.3.11",
    "matplotlib>=3.10.8",
    "scipy>=1.12.0",
    "cdsapi>=0.7.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mmtsfm", "src/utils", "src/eval"]

# Leonardo compute-node NVIDIA driver is CUDA 12.2 (reports "found version 12020").
# The default PyPI torch wheel ships a newer CUDA runtime → training dies with
# "RuntimeError: The NVIDIA driver on your system is too old". Pin the cu121 build
# on Linux (CUDA minor-version compat covers a 12.2 driver). macOS dev keeps the
# PyPI CPU wheel, so this is a no-op locally.
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux'" }]
