[project]
name = "pv-baselines"
version = "0.1.0"
description = "Tier 0-2 baselines for PVTSFM (docs/experiments/BASELINE_COMPARISON.md)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "lightgbm>=4.3",
    "torch>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
tabpfn = [
    "tabpfn>=2.0",
]
tier3 = [
    # Chronos-2 is imported from MMTSFM/src and needs its transitive deps
    "transformers>=4.40",
    "einops>=0.7",
    "timesfm>=1.3",       # TimesFM 2.5 torch checkpoint
    "tirex>=1.0",         # NX-AI TiRex (xLSTM)
    "granite-tsfm>=0.2",  # tsfm_public — TinyTimeMixer (TTM-R3)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "tier0", "tier1", "tslib", "tier3", "tier4"]
