[project]
name = "pv-baselines"
version = "0.1.0"
description = "Tier 0-2 baselines for PVTSFM (docs/experiments/BASELINE_COMPARISON.md)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "lightgbm>=4.3",
    "torch>=2.0",
    "scikit-learn>=1.9.0",
]

[tool.uv]
# tirex (tier3) publishes no wheels for win32; limit universal resolution to
# the platforms we actually run on so the lock resolves.
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
tabpfn = [
    "tabpfn>=2.0",
]
tier3 = [
    # Chronos-2 is imported from MMTSFM/src and needs its transitive deps
    "transformers>=4.40",
    "einops>=0.7",
    "timesfm>=1.3",       # TimesFM 2.5 torch checkpoint
    "tirex",              # NX-AI TiRex (xLSTM); pin set on the GPU cluster
    "granite-tsfm>=0.2",  # tsfm_public — TinyTimeMixer (TTM-R3)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "tier0", "tier1", "tslib", "tier3", "tier4"]
