[project]
name = "pv-baselines"
version = "0.1.0"
description = "Tier 0-2 baselines for PVTSFM (docs/experiments/BASELINE_COMPARISON.md)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "lightgbm>=4.3",
    "torch>=2.0",
    "scikit-learn>=1.9.0",
    "h5py",
    "pillow",
]

[tool.uv]
# tirex (tier3) publishes no wheels for win32; limit universal resolution to
# the platforms we actually run on so the lock resolves.
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]

# Leonardo Booster nodes report CUDA driver 12.2 (API version 12020). The PyPI
# default torch wheel is +cu130 (built for CUDA 13.0), whose runtime needs a
# >=13.x driver, so torch.cuda.is_available() is False on the node and every
# "GPU" task silently runs on CPU. Pin the linux build to the cu121 wheel,
# whose 12.1 runtime runs on the 12.2 driver. macOS local-dev keeps the normal
# PyPI (CPU/MPS) wheel because the source is marker-scoped to linux.
[tool.uv.sources]
torch = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.0",
]
tabpfn = [
    "tabpfn>=2.0",
]
tier3 = [
    # Chronos-2 is imported from MMTSFM/src and needs its transitive deps
    "transformers>=4.40",
    "einops>=0.7",
    "timesfm>=1.3",       # TimesFM 2.5 torch checkpoint
    "tirex",              # NX-AI TiRex (xLSTM); pin set on the GPU cluster
    "granite-tsfm>=0.2",  # tsfm_public — TinyTimeMixer (TTM-R3)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "tier0", "tier1", "tslib", "tier3", "tier4"]
